# SC3020

./: CMakeLists.txt  README.md
src/: Storage.cpp  StorageComponent.cpp  b_plus_tree.cpp  b_plus_tree.h  b_plus_tree_display.cpp  b_plus_tree_insert.cpp  b_plus_tree_rangeQuery.cpp  b_plus_tree_range_search.cpp  b_plus_tree_remove.cpp  b_plus_tree_remove.h  b_plus_tree_removeHelperFunctions.cpp  b_plus_tree_removeHelperFunctions.h  b_plus_tree_search.cpp  main.cpp  storage.cpp  storage.h  storage_component.h  storage_components.h  tree_node.cpp  tree_node.h
src1/: Storage.cpp  Storage.h  explanation.txt  tree-node.h
